# dalle-rust-discord-bot

./: Cargo.toml  build.rs  config.json
cmd_app/: Cargo.toml
cmd_app/src/: main.rs
dalle/: Cargo.toml
dalle/src/: dalle.rs  dalle_trait.rs  fake_dalle.rs
discord_bot/: Cargo.toml  config.example.json
discord_bot/src/: dalle_commands.rs  main.rs
src/: dalle.rs  main.rs
