[package]
name = "cmd_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
log = "0.4.17"
serde_json = "1.0.82"
text_io = "0.1.12"
tokio = { version = "1", features = ["full"] }
dalle = {path = "../dalle"}
