[package]
name = "dalle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
const_format = "0.2.26"
futures = "0.3.21"
log = "0.4.17"
reqwest = {version = "0.11.11", features = ["json"]}
serde_json = "1.0.82"
text_io = "0.1.12"
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/dalle.rs"