[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
poise = "0.3.0"
tokio = { version = "1.20.1", features = ["full"] }
dalle = {path = "../dalle"}
serde_json = "1.0.82"
serde = "1.0.140"
uuid = { version = "1.1.2", features = ["fast-rng", "v4"] }
reqwest = "0.11.11"
bytes = "1.2.1"
log = "0.4.17"
